cilium-cli/connectivity/builder/manifests/client-egress-to-entities-world.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: client-egress-to-entities-world
spec:
  endpointSelector:
    matchLabels:
      kind: client
  egress:
  - toEntities:
    - world
    toPorts:
    - ports:
      - port: "80"
        protocol: TCP
  - toEndpoints:
    - matchExpressions:
      - { key: 'k8s-app', operator: In, values: [ "kube-dns", "coredns", "node-local-dns", "nodelocaldns" ] }
      - { key: 'io.kubernetes.pod.namespace', operator: In, values: [ "kube-system" ] }
    toPorts:
    - ports:
      - port: "53"
        protocol: UDP
      - port: "53"
        protocol: TCP
      # Gardener <https://gardener.cloud/> uses port 8053 for CoreDNS
      - port: "8053"
        protocol: UDP
      - port: "8053"
        protocol: TCP
  # OpenShift  runs coreDNS in openshift-dns namespace and uses port 5353
  - toEndpoints:
    - matchExpressions:
      - { key: 'dns.operator.openshift.io/daemonset-dns', operator: Exists }
      - { key: 'io.kubernetes.pod.namespace', operator: In, values: [ "openshift-dns" ] }
    toPorts:
    - ports:
      - port: "5353"
        protocol: UDP
      - port: "5353"
        protocol: TCP
  # For nodelocaldns using a link-local address (the "localip" mode).
  - toPorts:
    - ports:
      - port: "53"
        protocol: UDP
      - port: "53"
        protocol: TCP
    # Including 'world' here may still be needed for versions up to 1.16 (#997)
    toEntities:
      - host
      - world
